[gd_scene load_steps=13 format=3 uid="uid://c0gmqq0k826p5"]

[ext_resource type="Script" path="res://game/buy_upgrade_menu.gd" id="1_l4pv5"]
[ext_resource type="Texture2D" uid="uid://bridvg52jj1ml" path="res://assets/Background.png" id="2_qxygm"]
[ext_resource type="Texture2D" uid="uid://bdw34d2t2drg6" path="res://assets/Gem.png" id="3_njcn4"]
[ext_resource type="FontFile" uid="uid://dhl7e2l35ot2l" path="res://assets/m5x7.ttf" id="4_4p8nu"]
[ext_resource type="PackedScene" uid="uid://lga66hytf41s" path="res://game/upgrade_cards.tscn" id="5_lolo4"]
[ext_resource type="Texture2D" uid="uid://tr7v5tv5r3fv" path="res://assets/Refresh.png" id="6_pavwn"]
[ext_resource type="Texture2D" uid="uid://cqso2av28621n" path="res://assets/Refresh-Disabled.png" id="7_q5qmw"]

[sub_resource type="LabelSettings" id="LabelSettings_1tx6n"]
font = ExtResource("4_4p8nu")
font_size = 13

[sub_resource type="Theme" id="Theme_slrfw"]
default_font = ExtResource("4_4p8nu")
default_font_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_nduov"]
font = ExtResource("4_4p8nu")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_8oc2j"]
font_size = 6

[sub_resource type="Theme" id="Theme_mcgmv"]
default_font = ExtResource("4_4p8nu")
default_font_size = 12

[node name="BuyUpgradeMenu" type="CanvasLayer"]
script = ExtResource("1_l4pv5")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.67451)
custom_minimum_size = Vector2(320, 180)
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("2_qxygm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(320, 180)
offset_right = 320.0
offset_bottom = 180.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 12

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(4, 4)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_njcn4")

[node name="GemCounter" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "999
"
label_settings = SubResource("LabelSettings_1tx6n")
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4

[node name="BonusList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_slrfw")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/BonusList"]
layout_mode = 2
text = "Current Bonus"
label_settings = SubResource("LabelSettings_nduov")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 90)
layout_mode = 2

[node name="UpgradeCard" parent="VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("5_lolo4")]
unique_name_in_owner = true
layout_mode = 2

[node name="UpgradeCard2" parent="VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("5_lolo4")]
unique_name_in_owner = true
layout_mode = 2

[node name="UpgradeCard3" parent="VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("5_lolo4")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="RefreshButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/Control2"]
unique_name_in_owner = true
layout_mode = 2
offset_top = -8.0
offset_right = 62.0
offset_bottom = 8.0
texture_normal = ExtResource("6_pavwn")
texture_disabled = ExtResource("7_q5qmw")
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Control2"]
layout_mode = 0
offset_left = 26.0
offset_top = 11.0
offset_right = 29.0
offset_bottom = 14.0
size_flags_vertical = 4
texture = ExtResource("3_njcn4")

[node name="RefreshCost" type="Label" parent="VBoxContainer/HBoxContainer/Control2"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 33.0
offset_top = 7.0
offset_right = 38.0
offset_bottom = 19.0
size_flags_horizontal = 4
text = "9"
label_settings = SubResource("LabelSettings_8oc2j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextWave" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_mcgmv")
text = "Next Wave (Wave 99)"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Control2/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/NextWave" to="." method="_on_next_wave_pressed"]
